# verificar

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  QUALITY_STATUS.md  README.md  build.rs  pmat.toml
.cargo/: config.toml
.github/workflows/: nightly.yml
.pmat/: context.db  deps-cache.json  project.toml
.pmat-metrics/: commit-1ba0b07-meta.json  commit-2678737-meta.json  commit-37b3855-meta.json  commit-43c251d-meta.json  commit-570c664-meta.json  commit-5976ea0-meta.json  commit-75e9ba5-meta.json  commit-835ff4f-meta.json  commit-87a2c63-meta.json  commit-964cbbc-meta.json  commit-a4c411c-meta.json  commit-aa74cdd-meta.json  commit-c55130b-meta.json  commit-d080583-meta.json  commit-e70442d-meta.json
.pmat/context.idx/: functions.lz4  manifest.json
.pmat/metrics/: dependencies.json
benches/: generator.rs  mutator.rs  oracle.rs
depyler_tests/: Cargo.toml  test_000_option_path_default.py  test_000_option_path_default.rs  test_001_option_path_override.py  test_001_option_path_override.rs  test_002_option_path_dict_get.py  test_002_option_path_dict_get.rs  test_003_option_path_or_fallback.py  test_003_option_path_or_fallback.rs  test_004_trait_object_conditional_return.py  test_004_trait_object_conditional_return.rs  test_005_trait_object_ternary.py  test_005_trait_object_ternary.rs  test_006_trait_object_param_both_types.py  test_006_trait_object_param_both_types.rs  test_007_trait_object_list_mixed.py  test_007_trait_object_list_mixed.rs  test_008_trait_object_class_field.py  test_008_trait_object_class_field.rs  test_009_value_json_to_dict_field.py  test_009_value_json_to_dict_field.rs  test_010_value_json_nested_iteration.py  test_010_value_json_nested_iteration.rs  test_011_value_json_conditional_access.py  test_011_value_json_conditional_access.rs  test_012_value_dict_json_merge.py  test_012_value_dict_json_merge.rs  test_013_enter_returns_self.py  test_013_enter_returns_self.rs  test_014_enter_returns_different.py  test_014_enter_returns_different.rs  test_015_enter_nested_different_types.py  test_015_enter_nested_different_types.rs  test_016_exit_exception_handling.py  test_016_exit_exception_handling.rs
docs/roadmaps/: roadmap-v2.yaml  roadmap.yaml
docs/specifications/: automl-synthetic-data-codex-spec.md  codex-multi-tech-python-to-rust-spec.md  verificar-041-spec.md  verificar-synth-to-domain-specific-codex.md
examples/: backend_selector.rs  experiment_tracking.rs  generator_basic.rs  grammar_validation.rs
src/: audit.rs  error.rs  generated_contracts.rs  lib.rs
src/data/: corpus.rs  mod.rs  parquet.rs  pipeline.rs
src/generator/: bash_enum.rs  c_enum.rs  coverage.rs  depyler_patterns.rs  mod.rs  python_enum.rs  ruchy_enum.rs  strategy.rs  swarm.rs
src/grammar/: bash.rs  c.rs  mod.rs  python.rs  ruchy.rs  typescript.rs
src/ml/: active_learner.rs  aprender.rs  augmentation.rs  backend.rs  codex_pipeline.rs  commit_features.rs  defect_predictor.rs  entrenar.rs  evaluator.rs  experiment.rs  mod.rs  quality_gate.rs  rich_labeling.rs  rl_prioritizer.rs  trainer.rs  training.rs
src/mutator/: ast_mutator.rs  cwe_bash.rs  mod.rs  operators.rs
src/oracle/: diff.rs  executor.rs  mod.rs  sandbox.rs  semantic.rs
src/transpiler/: ml_oracle.rs  mod.rs  oracle.rs
tests/book/: mod.rs
tests/book/grammar_generation/: mod.rs  sampling_strategies.rs
tests/book/integrations/: depyler.rs  mod.rs
tests/book/ml_pipeline/: bug_prediction.rs  mod.rs  model_evaluation.rs  test_prioritization.rs
tests/book/mutation_testing/: mod.rs  operators.rs
tests/book/verification/: mod.rs  oracles.rs
verified/: results.json
